테스트 커밋

--- a/_posts/TIL/2022-03-17-ex.md
+++ b/_posts/TIL/2022-03-17-ex.md
@@ -1,6 +1,6 @@
 ---
 title: "테스트 커밋"
-excerpt: "import와 export를 사용해보자"
+excerpt: "테스트 커밋"
 
 categories: react
 tags: [javascript, react, import, export]
