2205 TIL 수정 및 나머지

--- a/_posts/TIL/2022-05-04-callback.md
+++ b/_posts/TIL/2022-05-04-callback.md
@@ -3,7 +3,7 @@ title: "callback"
 excerpt: "다시 호출해!"
 
 categories: javascript
-tags: javascript, callback]
+tags: [javascript, callback]
 
 toc: true
 toc_sticky: true
