--- a/_posts/TIL/2022-05-09-promise.md
+++ b/_posts/TIL/2022-05-09-promise.md
@@ -3,7 +3,7 @@ title: "promise"
 excerpt: "요청한 함수를 전부 실행해줘!"
 
 categories: javascript
-tags: javascript, promise]
+tags: [javascript, promise]
 
 toc: true
 toc_sticky: true
