--- a/_posts/TIL/2022-05-10-lazy-load.md
+++ b/_posts/TIL/2022-05-10-lazy-load.md
@@ -3,7 +3,7 @@ title: "lazy load와 preload"
 excerpt: "나중에 로딩해줄래?"
 
 categories: javascript
-tags: javascript, lazy load]
+tags: [javascript, lazy load]
 
 toc: true
 toc_sticky: true
