--- a/_posts/TIL/2022-05-19-seo.md
+++ b/_posts/TIL/2022-05-19-seo.md
@@ -3,7 +3,7 @@ title: "SEO (CSR, SSR, SSG)"
 excerpt: "렌더링 속도가 달라!왜 그런거지?"
 
 categories: web
-tags: web, seo, csr, ssrm ssg]
+tags: [web, seo, csr, ssrm ssg]
 
 toc: true
 toc_sticky: true
