--- a/_posts/TIL/2022-05-20-spa-mpa.md
+++ b/_posts/TIL/2022-05-20-spa-mpa.md
@@ -3,7 +3,7 @@ title: "SPA vs MPA"
 excerpt: "싱글페이지?멀티페이지?그게 뭐야!"
 
 categories: web
-tags: web, spa, mpa]
+tags: [web, spa, mpa]
 
 toc: true
 toc_sticky: true
