--- a/_posts/TIL/2022-05-11-reduce.md
+++ b/_posts/TIL/2022-05-11-reduce.md
@@ -3,7 +3,7 @@ title: "reduce"
 excerpt: "배열 메서드를 알아보자"
 
 categories: javascript
-tags: javascript, reduce]
+tags: [javascript, reduce]
 
 toc: true
 toc_sticky: true
