--- a/_posts/css/2023-01-09-css.md
+++ b/_posts/css/2023-01-09-css.md
@@ -31,12 +31,7 @@ sidebar: false
 
 ### 조건1. 인접하는 블록 요소
 
-<p class="codepen" data-height="300" data-default-tab="html" data-slug-hash="poZQWXq" data-user="hyeun427" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
-  <span>See the Pen <a href="https://codepen.io/hyeun427/pen/poZQWXq">
-  Untitled</a> by hyeun427 (<a href="https://codepen.io/hyeun427">@hyeun427</a>)
-  on <a href="https://codepen.io">CodePen</a>.</span>
-</p>
-<script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+!codepen[hyeun427/embed/poZQWXq?default-tab=html]
 
 box1과 box2의 마진이 각각 30px임에도 결과물을 확인해보면 두 요소의 사이 마진이 60px이 아닌 30px로 마진병합이 적용되어있는 것을 확인 할 수 있다.
 
