--- a/_posts/css/2023-01-09-css.md
+++ b/_posts/css/2023-01-09-css.md
@@ -31,9 +31,10 @@ sidebar: false
 
 ### 조건1. 인접하는 블록 요소
 
-!codepen[hyeun427/embed/poZQWXq?default-tab=html]
+![block](/assests/imgages/margin-collapsing1.PNG)
+![block](/assests/imgages/margin-collapsing2.PNG)
 
-box1과 box2의 마진이 각각 30px임에도 결과물을 확인해보면 두 요소의 사이 마진이 60px이 아닌 30px로 마진병합이 적용되어있는 것을 확인 할 수 있다.
+box1과 box2의 마진이 각각 30px임에도 결과물을 확인해보면 두 요소의 사이 마진(노란색 부분)이 60px이 아닌 30px로 마진병합이 적용되어있는 것을 확인 할 수 있다.
 
 ### 조건2. 부모 요소와 첫번째 자식 요소 혹은 마지막 자식 요소 관계일 경우
 
